# NukeVersionParser

./: .gitignore  README.md  collect_data.py  nuke-all-releases.json  nuke-all-supported-releases.json  nuke-minor-releases.json  nuke-minor-supported-releases.json  pyproject.toml
.github/workflows/: test_and_deploy.yaml
.woodpecker/: parse.yaml
nuke_version_parser/: main.py
nuke_version_parser/datamodel/: constants.py  nuke_data.py  version_data.py
nuke_version_parser/exporter/: export_data.py
nuke_version_parser/parser/: parse_data.py  url_calculator.py
src/nuke_version_parser/datamodel/: nuke_data.py
src/nuke_version_parser/parser/: collector.py  parse_data.py
src/nukeversionparser/: main.py
src/nukeversionparser/exporter/: export_data.py
src/nukeversionparser/parser/: collector.py  parse_data.py  url_calculator.py
tests/: conftest.py
tests/datamodel/: test_nuke_data.py  test_version_data.py
tests/exporter/: test_export_data.py
tests/parser/: test_collector.py  test_parse_data.py  test_url_calculator.py
