[project]
name = "nukeversionparser"
version = "1.1.0"
description = "Automatic parser that reports in a JSON all latest Nuke versions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[tool.uv]
package=true

[project.scripts]
nuke-versionparser = "nukeversionparser.main:main"

[tool.hatch.build.tarwgets.wheel]
packages = ["src/nuketesting"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "--capture=tee-sys"
pythonpath = [
    "src"
]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "EM",
    "ERA",
    "F",
    "FA",
    "FIX",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TCH",
    "TD",
    "TID",
    "UP",
    "W",
    "YTT",
]
show-fixes = true
target-version = "py313"
